# porto-cli

./: .gitignore  Cargo.toml  README.md  clippy.toml  justfile  taplo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: settings.json  tasks.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: onboard.rs
crates/cli/src/utils/: crypto.rs  dialog.rs  spinner.rs
crates/cli/tests/: cli_test.rs
src/: error.rs  main.rs
src/commands/: mod.rs  onboard.rs
src/utils/: crypto.rs  dialog.rs  mod.rs  relay.rs  spinner.rs
tests/: cli_test.rs
