
[workspace]
members = ["crates/cli"]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Porto Contributors"]
description = "porto.sh"
repository = "https://github.com/o-az/porto-cli"
license = "MIT"
readme = "README.md"

[workspace.lints.rust]
redundant_imports = "warn"
redundant-lifetimes = "warn"
rust-2018-idioms = "warn"
unused-must-use = "warn"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
