
[workspace]
members = ["crates/cli"]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
readme = "README.md"
homepage = "https://porto.sh"
authors = ["Porto Contributors"]
repository = "https://github.com/o-az/porto-cli"
description = "Sign in with superpowers. Buy, swap, subscribe, and much more. No passwords or extensions required."

[workspace.lints.rust]
redundant_imports = "warn"
redundant-lifetimes = "warn"
rust-2018-idioms = "warn"
unused-must-use = "warn"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
